# fast-api-base

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  app.db  backend_pre_start.py  docker-compose.yml  example.env  local-run.sh  main.py  postgres-init.sh  prestart.sh  pyproject.toml
.github/: on_push.yml  pull_request_commit.md
.github/workflows/: on_push.yml
hooks/: README.MD  pre-commit.sh  pre-push.sh
migrations/: env.py
migrations/versions/: 2023-02-08_inicial_revision.py  2023-02-10_inicial_migration.py  2023-02-16_created_relationship_with_table_team.py
prestart_scripts/: postgres-init.sh  prestart.sh
src/: config.py  main.py
src/core/: config.py
src/db/: session.py
src/dependencies/: hero_dependency.py
src/environments/: default_db_config.env  development.env
src/internal/: status.py
src/models/: hero.py  sn_base_model.py  sn_request_base_model.py  sn_response_base_model.py  team.py
src/repositories/: base_repository.py  hero_repository.py
src/routers/: heroes.py  items.py
src/schemas/: hero.py
src/tests/: conf_test_db.py  conftest.py
src/tests/client_configuration/: test_async_route.py  test_sync_route.py
src/tests/models/: test_hero.py
src/tests/routes/: test_hero.py
