[tool.poetry]
name = "fast-api-base"
version = "0.1.0"
description = ""
authors = ["Dan Tchechenistky"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlmodel = "^0.0.8"
alembic = "^1.9.3"
psycopg2 = "^2.9.5"
tenacity = "^8.2.1"
pytest = "^7.2.1"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
